--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,8 @@ jobs:
         run: npm run lint
       - name: Build 🔨
         run: npm run build
+        env:
+          VITE_BASE_URL: ${{ secrets.VITE_BASE_URL }}
       - name: Upload production-ready build files
         uses: actions/upload-artifact@v3
         with:
