--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.13.1",
+    "@cloudinary/url-gen": "^1.21.0",
     "axios": "^1.6.7",
     "copy-to-clipboard": "^3.3.3",
+    "motion": "^11.11.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
