--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@cloudinary/url-gen": "^1.21.0",
     "axios": "^1.6.7",
     "copy-to-clipboard": "^3.3.3",
+    "lottie-react": "^2.4.0",
     "motion": "^11.11.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
